--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -33,6 +33,7 @@
             <div class="class">
                 <h2>DINLAS Question Blog</h2>
                 <div id="navbarSupportedContent">
+                        <a href="http://di-class.herokuapp.com">Home</a>
                     <a href="/qBlog/ask">Ask</a>
                     <a href="/qBlog">All question</a>
                     <!-- <a href="">Category</a>
